--- a/src/check.html
+++ b/src/check.html
@@ -29,9 +29,10 @@
 </div>
 
 <div class="details">
+        Case No: <span id="caseID"></span></br></br>
         Location: <span id="loc"></span></br></br>
-	<span>IpfsHash: <span id="ipfs"></span></br></br>
-	<span>SHA256 Hash: <span id="allhash"></span></br></br>
+	IpfsHash: <span id="ipfs"></span></br></br>
+	SHA256 Hash: <span id="allhash"></span></br></br>
 </div>
 </br>
 </br>
