--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <script src="https://unpkg.com/ipfs-api@9.0.0/dist/index.js" integrity="sha384-5bXRcW9kyxxnSMbOoHzraqa7Z0PQWIao+cgeg327zit1hz5LZCEbIMx/LWKPReuB" crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.js"></script>
-<!--<script src ="js/merkleHash.js"></script>-->
+<!--<script type="module" src ="js/ipfs.js"></script>-->
 
 </head>
 
